<?xml version="1.0"?>
<package format="2">
  <name>husky_exploration</name>
  <version>0.0.0</version>
  <description>The husky_exploration package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <url type="website">https://aws.amazon.com/robomaker/</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>husky_gazebo</build_depend>
  <build_depend>husky_navigation</build_depend>
  <build_depend>husky_viz</build_depend>
  
  <build_export_depend>husky_gazebo</build_export_depend>
  <build_export_depend>husky_navigation</build_export_depend>
  <build_export_depend>husky_viz</build_export_depend>
  
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>husky_viz</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
